Update GET /api/visits logic